spec/0.3/core-model.md
# SCS 0.1 — Core Model  
**Version:** 0.1 (Draft)  
**Status:** Work in Progress  
**Last Updated:** 2025-11-17  

---

## 1. Purpose

The Core Model defines the foundational structures and semantics of the Structured Context Specification (SCS).  
It establishes the conceptual architecture upon which SCDs, tiers, bundles, schemas, and tools are built.

This model is **normative** for SCS 0.1 and is intended to remain stable across future versions.

---

## 2. Model Overview

The SCS Core Model is built around three fundamental concepts:

1. **Structured Context Documents (SCDs)**  
2. **SCD Tiers**  
3. **SCD Bundles**

These concepts form a layered representation of system context that is:

- modular  
- hierarchical  
- versionable  
- analyzable  
- AI-consumable  
- tool-friendly  

The model ensures that context is explicit, structured, and governed.

---

## 3. Structured Context Documents (SCDs)

An **SCD** is the atomic unit of structured context.  
All SCDs share a common structural template, but each SCD type (tier) applies specific semantics and constraints.

### 3.1 Required Properties

Every SCD must include:

| Property | Description |
|---------|-------------|
| `id` | Unique, stable identifier for the SCD |
| `type` | One of: `meta`, `standards`, `project` |
| `title` | Human-readable title |
| `version` | SCD version (independent of the SCS version) |
| `description` | Summary of purpose and scope |
| `content` | Structured fields defined by the SCD schema |
| `relationships` | Optional set of typed references to other SCDs |
| `provenance` | Metadata on authorship, dates, and decisions |

These properties provide minimal requirements for:

- traceability  
- interoperability  
- tool compatibility  
- human readability  

---

## 4. SCD Structure

While SCD structures may evolve, the 0.1 version establishes the following top-level pattern:

```yaml
id: scd:<unique-id>
type: meta | standards | project
title: <string>
version: <string>
description: <string>

content:
  <structured fields as defined by schema>

relationships:
  - type: <relationship-type>
    target: scd:<id>
    description: <optional>

provenance:
  created_by: <human-or-agent>
  created_at: <timestamp>
  updated_by: <human-or-agent>
  updated_at: <timestamp>
  rationale: <optional description>
```

This structure ensures:

- consistency
- clarity
- machine-readability
- schema validation

---

## 5. SCD Tiers (Type Model)

Each SCD must belong to exactly one tier:

### 5.1 Meta-Tier

Defines the conceptual foundation of a system.

Includes:
	•	roles
	•	domain concepts
	•	capabilities
	•	cross-cutting concerns
	•	lifecycle semantics
	•	naming conventions
	•	abstract structures

### 5.2 Standards-Tier

Represents external, imported standards or policies.

Includes:
	•	regulatory requirements
	•	certification controls
	•	interoperability specifications
	•	organizational policies

### 5.3 Project-Tier

Defines the specific system being built.

Includes:
	•	architecture
	•	modules
	•	features
	•	quality attributes
	•	security requirements
	•	performance targets
	•	compliance mappings
	•	operational constraints

---

## 6. Relationships

Relationships enable SCDs to form a connected knowledge graph.

### 6.1 Relationship Types

Common relationship types include:

- depends-on
- constrains
- satisfies
- refines
- extends
- conflicts-with
- implements

Tools may introduce additional semantics, but 0.1 defines the minimal set.

### 6.2 Requirements

A relationship must include:

- type
- target (another SCD id)
- optional description

### 6.3 Purpose

Relationships support:

- impact analysis
- dependency mapping
- compliance tracing
- multi-tier reasoning
- autonomic governance

---

## 7. SCD Bundles

An SCD Bundle is the complete set of SCDs required to define a system.

Bundles may include:

| Tier | Included? | 
| ---- | ---- |
| Meta-tier SCDs | Required |
| Standards-tier SCDs | Optional, but common |
| Project-tier SCDs | Required |

### 7.1 Bundle Form

A bundle may be represented as:

- a folder of SCD files
- a bundle.yaml manifest referencing individual SCDs
- a structured package for tools

### 7.2 Required Properties

Bundles must define:

- bundle id
- bundle version
- list of SCDs
- optional metadata or tags

Example minimal bundle file:

```yaml
id: bundle:example-system
version: "0.1"
scds:
  - scd:meta:roles
  - scd:standards:hipaa
  - scd:project:architecture
```
---

## 8. Versioning Model

SCDs and bundles are versioned independently of the SCS specification version.

### 8.1 SCD Versioning

Each SCD includes its own version field.

Version changes reflect:

- content changes
- structural updates
- compliance adjustments
- refinement or clarification

### 8.2 Bundle Versioning

Bundle versions represent:

- addition/removal of SCDs
- changes in SCD versions
- relationship updates

### 8.3 SCS Version (Spec Version)

SCS 0.1 defines:

- schema templates
- required fields
- allowed SCD structure

Future SCS versions may introduce changes, but SCDs written for 0.1 must remain readable by compatible tools.

---

## 9. Governance-Ready Architecture

The Core Model supports autonomic governance through:

- explicit semantics
- traceable relationships
- versioned context
- audit-ready provenance
- importable standards
- machine-validatable structure

AI governance agents operate over bundles to:

- evaluate compliance
- detect inconsistencies
- monitor evolution
- analyze risk
- enforce constraints

These capabilities emerge from the Core Model itself.

---

## 10. Tooling Implications (Non-Normative)

The Core Model enables future tools such as:

- SCD Bundle Viewer/Editor
- SCD Validator
- SCD Evaluator
- Compliance Mappers
- Architecture Graph Viewers
- Change Impact Analyzers

While tooling is out of scope for 0.1, the Core Model is designed to support it from the beginning.

---

## 11. Extensibility

SCS 0.1 defines the minimal Core Model.

Future versions may extend:
	•	relationship types
	•	domain-specific SCD structures
	•	compliance mapping schemas
	•	governance semantics
	•	bundle metadata
	•	visualization formats

The Core Model is intended to remain stable while allowing structured evolution.

---

## 12. Feedback

Suggested improvements to the Core Model may be submitted via GitHub Issues.